Abstracted layout components

--- a/LauraAndChad/LauraAndChad.csproj
+++ b/LauraAndChad/LauraAndChad.csproj
@@ -109,7 +109,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -150,6 +149,48 @@
     <Content Include="dev\_settings.scss" />
     <Content Include="dev\_normalize.scss" />
     <Content Include="tsconfig.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\_Registry.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\_OurStory.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\_Home.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\_TheWedding.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\_GettingThere.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\_Nav.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\_Footer.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="dev\_footer.scss" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="dev\_getting-there.scss" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="dev\_home.scss" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="dev\_nav.scss" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="dev\_our-story.scss" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="dev\_registry.scss" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="dev\_the-wedding.scss" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
