Fleshed out design more

--- a/.gitignore
+++ b/.gitignore
@@ -247,3 +247,6 @@ ModelManifest.xml
 /LauraAndChad/Content/app.js
 /LauraAndChad/Content/app.css
 /LauraAndChad/temp/lib
+/LauraAndChad/Properties/PublishProfiles
+/LauraAndChad/temp
+/LauraAndChad/Content/images/video.mp4
