--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,5 @@ ModelManifest.xml
 /LauraAndChad/Properties/PublishProfiles
 /LauraAndChad/temp
 /LauraAndChad/Content/images/video.mp4
+/LauraAndChad/Web.Debug.config
+/LauraAndChad/Web.Release.config
