--- a/LauraAndChad/LauraAndChad.csproj
+++ b/LauraAndChad/LauraAndChad.csproj
@@ -142,7 +142,9 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <None Include="gulpfile.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -165,6 +167,8 @@
     <None Include="dev\app.scss" />
     <None Include="dev\_settings.scss" />
     <None Include="dev\_normalize.scss" />
+    <None Include="Properties\PublishProfiles\pioneercode.com - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\pioneercode.com - Web Deploy.pubxml" />
     <None Include="tsconfig.json" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
   </ItemGroup>
