--- a/LauraAndChad/Web.config
+++ b/LauraAndChad/Web.config
@@ -20,6 +20,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <trust level="Full"/>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
