--- a/LauraAndChad/LauraAndChad.csproj
+++ b/LauraAndChad/LauraAndChad.csproj
@@ -137,10 +137,16 @@
   <ItemGroup>
     <Content Include="Content\app.css" />
     <Content Include="Content\app.js" />
+    <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\images\marble.jpg" />
     <Content Include="Content\images\video.mp4" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Content\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\fonts\FontAwesome.otf" />
     <None Include="gulpfile.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
