IE fix for parallax scrolling

--- a/LauraAndChad/LauraAndChad.csproj
+++ b/LauraAndChad/LauraAndChad.csproj
@@ -140,6 +140,8 @@
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\images\marble.jpg" />
     <Content Include="Content\images\video.mp4" />
+    <Content Include="dev\scripts\parallax.js" />
+    <Content Include="dev\scripts\syntaxhighlighter.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\fonts\fontawesome-webfont.eot" />
@@ -147,6 +149,7 @@
     <Content Include="Content\fonts\fontawesome-webfont.woff" />
     <Content Include="Content\fonts\fontawesome-webfont.woff2" />
     <Content Include="Content\fonts\FontAwesome.otf" />
+    <Content Include="dev\scripts\syntaxhighlighter.js.map" />
     <None Include="gulpfile.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
