--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,4 @@ ModelManifest.xml
 /LauraAndChad/Content/images/video.mp4
 /LauraAndChad/Web.Debug.config
 /LauraAndChad/Web.Release.config
+/LauraAndChad/Scripts
