--- a/LauraAndChad/bower.json
+++ b/LauraAndChad/bower.json
@@ -4,9 +4,9 @@
   ],
   "dependencies": {
     "font-awesome": "4.6.1",
-    "foundation-sites": "^6.2.3",
+    "foundation-sites": "6.2.3",
     "parallax.js": "^1.4.2",
-    "smooth-scroll.js": "10.1.0" 
+    "smooth-scroll.js": "10.1.0"
   },
   "description": "Wedding Site",
   "ignore": [
@@ -23,9 +23,5 @@
   ],
   "name": "Wedding Site",
   "private": true,
-  "resolutions": {
-    "foundation-sites": "^6.2.3",
-    "font-awesome": "^4.6.3"
-  },
   "version": "0.1.0"
 }
